agregados carpeta scripts y boton agregar palabra

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <h1 class="titulo">El Juego del Ahorcado</h1>
             <h2>Descubre la palabra oculta</h2>
             <button class="btn" id="iniciar-juego">JUEGA</button>
+            <button class="btn" id="btnIniciarAgregaPalabra">Agregar palabra</button>
         </div>
         <section id="aparece-ahorcado">
             <canvas id="horca" height="860px" width="1200px"></canvas>
