update funcion dibujarLineas

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <img class="logo" id="img-logo" src="img/logo.svg" alt="logo Alura" />
     </header>
     <main class="contenedor" style="text-align:center;">
-        <div style="text-align:center; margin: 50px 0px;">
+        <section style="text-align:center; margin: 50px 0px;">
             <h1 class="titulo">El Juego del Ahorcado</h1>
             <h2>Descubre la palabra oculta</h2>
-            <button class="btn" id="iniciar-juego">JUEGA</button>
+            <button class="btn" id="iniciar-juego">Jugar</button>
             <button class="btn" id="btnIniciarAgregaPalabra">Agregar palabra</button>
-        </div>
+        </section>
         <section id="aparece-ahorcado">
-            <canvas id="horca" height="860px" width="1200px"></canvas>
+            <canvas id="horca" width="1200px" height="860px"></canvas>
             <div class="subrayado"></div>
         </section>
 
@@ -35,8 +35,7 @@
     </footer>
 
 
-    <script type="text/javascript" src="canvas.js"></script>
-    <script type="text/javascript" src="ahorcado.js"></script>
+    <script type="text/javascript" src="./js/script.js"></script>
 </body>
 
 </html>
