--- a/index.html
+++ b/index.html
@@ -2,20 +2,19 @@
 <html lang="es">
 
 <head>
+
+<body>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Juego del Ahorcado</title>
     <link rel="stylesheet" href="./style/reset.css">
-
-</head>
-
-<body>
+    <link rel="stylesheet" href="./style/style.css" </head> <body>
     <header>
         <img class="logo" id="img-logo" src="img/logo.svg" alt="logo Alura" />
     </header>
     <main class="contenedor" style="text-align:center;">
-        <section style="text-align:center; margin: 50px 0px;">
+        <section id="titulos">
             <h1 class="titulo">El Juego del Ahorcado</h1>
             <h2>Descubre la palabra oculta</h2>
             <button class="btn" id="iniciar-juego">Jugar</button>
@@ -23,7 +22,7 @@
         </section>
         <section id="aparece-ahorcado">
             <canvas id="horca" width="1200px" height="860px"></canvas>
-            <div class="subrayado"></div>
+            <span id="mostrarError"></span>
         </section>
 
 
