--- a/index.html
+++ b/index.html
@@ -14,15 +14,26 @@
         <img class="logo" id="img-logo" src="img/logo.svg" alt="logo Alura" />
     </header>
     <main class="contenedor" style="text-align:center;">
-        <section id="titulos">
+        <div class="titulos">
             <h1 class="titulo">El Juego del Ahorcado</h1>
             <h2>Descubre la palabra oculta</h2>
-            <button class="btn" id="iniciar-juego">Jugar</button>
-            <button class="btn" id="btnIniciarAgregaPalabra">Agregar palabra</button>
+        </div>
+        <section id="inicio">
+            <div class="columna">
+                <button class="btn" id="btnIniciarJuego">Jugar</button>
+                <button class="btn" id="btnIniciarAgregaPalabra">Agregar palabra</button>
+            </div>
         </section>
-        <section id="aparece-ahorcado">
-            <canvas id="horca" width="1200px" height="860px"></canvas>
-            <span id="mostrarError"></span>
+        <section id="contenedorTablero" class="invisible">
+            <div id="aparece-ahorcado">
+                <canvas id="horca" width="1200px" height="800px"></canvas>
+                <span id="mostrarError"></span>
+
+            </div>
+            <div class="botones">
+                <button class="btn" id="btnReiniciarJuego">Reiniciar</button>
+                <button class="btn" id="btnFinalizarJuego">Finalizar</button>
+            </div>
         </section>
 
 
