update funciones y estilos

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main class="contenedor" style="text-align:center;">
         <div class="titulos">
-            <h1 class="titulo">El Juego del Ahorcado</h1>
+            <!-- <h1 class="titulo">El Juego del Ahorcado</h1> -->
             <h2>Descubre la palabra oculta</h2>
         </div>
         <section id="inicio">
